# PL_Mind_Dump

./: .gitignore  .gitmodules  About-Life.org  Books.bib  README.md  TODO.org  Terminologies.md
Category_Theory/: Yoneda_Lemma.org  Yoneda_and_CPS.org  Yoneda_and_CPS.tex
Dictionary/: Closed_Term.org  Complete_Program.org  Elaboration.org  Higher_Rank_Polymorphism.org  Open_Term.org  Predicative_Polymorphism.org  Skolem.org  Terminologies.org  Type_Inference.org  Unification_Variable.org  Variants.org
Effects/: Algebraic_Effect_and_Continuation.org  Free_Tree.v  Ideas.org  Non-termination_with_Effects.org
Effects/Effect-Framework/: Notes.org
Effects/What_is_Algebraic_About_Algebraic_Effects/: Algebraic_Effect_and_Continuation.org
Emacs/: .emacs  Important-Links.md  TeX-fold.org  Useful Commands.md  Weird_Bugs.org  lemon-emacs-pure.org  lemon-emacs.org
Languages/Haskell/Exercises/Codewars/: Codewars.cabal
Languages/Haskell/Exercises/Codewars/src/: CamelCase.hs  MultiplesOf3And5.hs
Languages/Haskell/Exercises/Codewars/test/: CamelCaseSpec.hs  Main.hs
Linux/: Setting-Tips.md  Useful Commands.md
Logic/Induction/: Mutual_Induction.v  Principles_of_Induction.v
Logic/Propositional_Logic/: Deduction_Theorem.v
Racket/: Important Links.md
Racket/Scribble/: mouse.scrbl
Reading/: Andromeda.org  McTT_ICFP_2026.org
References/PL/: References.bib
Semantics/: Categorical_Semantics.org
Semantics/Operational_Semantics/: Shifting_and_Substitution_of_Nameless_Representation.org
Software-Foundations/Typos/: Logical-Foundation.md
The-Little-Series/The-Little-Schemer/: The-Little-Schemer.rkt~
The-Little-Series/The-Little-Typer/: subtract.rkt
The-Little-Series/The-Reasoned-Schemer/: .gitignore  Typos.md  (+9 more)
Type-Theory/: Terminologies.md
Type_Theory/: Backlog.org  Higher_Kind_Restrictions.org  Identity_Types.org  Indexed_Types.org  System_F_Encoding.org
(+138 files in other folders)
